COMMERCE-3632 Account section base set-up

--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_clay_variables.scss
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_clay_variables.scss
@@ -22,3 +22,9 @@ $input-btn-padding-y: .4rem;
 $input-btn-padding-x: 1rem;
 
 $border-radius: .313rem;
+
+// breakpoints
+
+$bp-xxsmall: 376px;
+$bp-xsmall: 577px;
+$bp-small: 767px;
