LHC-2573 SF and add spacing inbetween buttons

--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/views/provisioning.scss
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/views/provisioning.scss
@@ -74,6 +74,10 @@
 		letter-spacing: 0.04rem;
 		text-transform: uppercase;
 	}
+
+	.left-button {
+		padding-right: $spacing-sm;
+	}
 }
 
 .details-table {
