--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-site-initializer/src/main/resources/com/liferay/osb/commerce/provisioning/site/initializer/internal/dependencies/fragments/layouts/account_management/account_management.html
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-site-initializer/src/main/resources/com/liferay/osb/commerce/provisioning/site/initializer/internal/dependencies/fragments/layouts/account_management/account_management.html
@@ -1,8 +1,9 @@
 <section class="account_management">
 	<div class="row">
 		<div class="col-lg-3"></div>
-		<div class="col-lg-9">
+		<div class="col-lg-6">
 			<lfr-widget-commerce-account-portlet></lfr-widget-commerce-account-portlet>
 		</div>
+		<div class="col-lg-3"></div>
 	</div>
 </section>
