--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/components/_commerce_accounts_portlet.scss
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/components/_commerce_accounts_portlet.scss
@@ -7,35 +7,18 @@
 		max-width: 600px;
 	}
 
-	.form-control {
-		max-width: 600px;
-		width: 100%;
-	}
-
 	.commerce-cta {
 		display: flex;
-		justify-content: flex-end;
-
-		@media screen and (max-width: $bp-small) {
-			justify-content: center;
-		}
+		justify-content: center;
 
 		.btn {
-			font-size: 12px;
 			font-weight: bold;
-			height: 50px;
-			line-height: 50px;
-			padding: 0;
-			transform: translateX(-132%);
+			flex: .9;
 
 			@media screen and (max-width: $bp-small) {
 				transform: translateX(0);
 			}
 		}
-	}
-
-	.taglib-logo-selector .avatar {
-		border-radius: 50%;
 	}
 
 	.edit-logo {
@@ -45,5 +28,29 @@
 		position: absolute;
 		top: -120px;
 		width: 100px;
+	}
+
+	.form-control {
+		background-color: #FFF;
+		width: 100%;
+	}
+
+	.logoselector {
+		display: none;
+
+	}
+
+	.panel {
+		background-color: transparent;
+		border: 0;
+		margin-bottom: 0;
+
+		&:nth-child(1) {
+			padding-bottom: 0;
+		}
+
+		&:nth-child(2) {
+			padding-top: 0;
+		}
 	}
 }
