--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/_custom.scss
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/_custom.scss
@@ -55,6 +55,10 @@ table {
 .inline-edit {
 	display: inline-block;
 
+	&.block {
+		display: block;
+	}
+
 	.editable-field {
 		border: 1px solid $primary-l2;
 		border-radius: $border-radius;
