COMMERCE-3611 Theme var addition for Clay components background color

--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_clay_variables.scss
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_clay_variables.scss
@@ -23,6 +23,8 @@ $input-btn-padding-x: 1rem;
 
 $border-radius: .313rem;
 
+$component-active-bg: $primary;
+
 // breakpoints
 
 $bp-xxsmall: 376px;
