LHC-2443 when viewing addresses keep controls compact. once editing expand controls onto their own line

--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/views/details.scss
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/views/details.scss
@@ -1,13 +1,17 @@
 .account-details,
 .support-information {
 	.address-controls {
-		justify-content: space-between;
+		justify-content: end;
 		padding-left: $spacing-md;
 		padding-right: $spacing-md;
 
-		&.list-group-item-flex {
-			flex-basis: 100%;
-			max-width: 100%;
+		&.editing {
+			justify-content: space-between;
+
+			&.list-group-item-flex {
+				flex-basis: 100%;
+				max-width: 100%;
+			}
 		}
 	}
 
