--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_custom.scss
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_custom.scss
@@ -1,5 +1,3 @@
-@import "components/commerce_accounts_portlet";
-@import "components/navbars";
 @import "fonts";
 
 body {
@@ -8,26 +6,28 @@ body {
 	), $gray-400;
 }
 
-main {
+#wrapper {
+	@import "components/commerce_accounts_portlet";
+	@import "components/navbars";
+	@import "components/sign_in";
+
+	padding: 0;
+
 	.btn-primary,
 	.btn-outline-primary,
 	.btn-secondary,
 	.btn-outline-secondary {
 		font-size: .8rem;
-		font-variant: all-small-caps;
-		font-weight: 600;
+		font-weight: 700;
 		letter-spacing: .1rem;
+		text-transform: uppercase;
 	}
 
 	.btn-link {
-		font-size: .8em;
+		font-size: .9em;
 	}
 
 	.btn-outline-primary {
 		border-color: $border-color;
 	}
-}
-
-#wrapper {
-	padding: 0;
 }
