COMMERCE-3634 Temporarily hide add account modal

--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_custom.scss
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_custom.scss
@@ -30,4 +30,9 @@ body {
 	.btn-outline-primary {
 		border-color: $border-color;
 	}
+
+	// FIXME Temporarily hide the B2B add account modal
+	#addAccountModal {
+		display: none;
+	}
 }
