COMMERCE-3626 Account section navigation

--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_custom.scss
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_custom.scss
@@ -32,7 +32,9 @@ body {
 	}
 
 	// FIXME Temporarily hide the B2B add account modal
-	#addAccountModal {
+	// FIXME Temporarily hide the B2B invite user modal
+	#addAccountModal,
+	#userInvitationModal {
 		display: none;
 	}
 }
