--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-site-initializer/src/main/resources/com/liferay/osb/commerce/provisioning/site/initializer/internal/dependencies/fragments/layouts/account_settings/account_settings.html
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-site-initializer/src/main/resources/com/liferay/osb/commerce/provisioning/site/initializer/internal/dependencies/fragments/layouts/account_settings/account_settings.html
@@ -7,13 +7,27 @@
 
 	<div class="row">
 		<div class="col-lg-3">
-			<lfr-widget-nav></lfr-widget-nav>
+			[#assign
+				portlet_preferences = freeMarkerPortletPreferences.getPreferences({
+					"portletSetupPortletDecoratorId": "barebone",
+					"rootMenuItemType": "absolute",
+					"rootMenuItemLevel": "0",
+					"displayStyle": "ddmTemplate_NAV-PILLS-STACKED-FTL"
+				})
+			/]
+
+			[#if liferay_portlet??]
+				[@liferay_portlet.runtime
+					defaultPreferences=portlet_preferences
+					instanceId="site_navigation_menu_account_navigation"
+					portletProviderAction=portletProviderAction.VIEW
+					portletProviderClassName="com.liferay.portal.kernel.theme.NavItem"
+				/]
+			[/#if]
 		</div>
 
-		<div class="col-lg-6">
+		<div class="col-lg-9">
 			<lfr-widget-commerce-account-portlet></lfr-widget-commerce-account-portlet>
 		</div>
-
-		<div class="col-lg-3"></div>
 	</div>
 </section>
