--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/components/navigation/_trial_navigation.scss
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/components/navigation/_trial_navigation.scss
@@ -2,9 +2,9 @@
 	margin-left: 1rem;
 
 	.nav-link {
-		font-size: .8rem;
+		font-size: 0.8rem;
 		font-weight: 700;
-		letter-spacing: .1rem;
+		letter-spacing: 0.1rem;
 		margin-bottom: 0;
 		text-transform: uppercase;
 	}
