--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_clay_variables.scss
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/_clay_variables.scss
@@ -1,27 +1,26 @@
-$gray-300: #EBEEF2;
-$gray-400: #EEF2FA;
-$gray-700: #545D69;
-$gray-800: #364A64;
+$gray-300: #ebeef2;
+$gray-400: #eef2fa;
+$gray-700: #545d69;
+$gray-800: #364a64;
 $gray-900: #394452;
 
-$primary: #0B63CE;
-$success: #50D2A0;
+$primary: #0b63ce;
+$success: #50d2a0;
 
-$orange: #FF8C21;
+$orange: #ff8c21;
 
 $border-color: rgba(11, 99, 206, 0.3);
 
-$font-family-sans-serif: "Source Sans Pro", -apple-system, BlinkMacSystemFont,
-	"Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-	"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-	"Noto Color Emoji";
+$font-family-sans-serif: 'Source Sans Pro', -apple-system, blinkmacsystemfont,
+	'Segoe UI', roboto, 'Helvetica Neue', arial, 'Noto Sans', sans-serif,
+	'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 
 $input-btn-border-width: 2px;
 $input-btn-line-height: 1.7;
-$input-btn-padding-y: .4rem;
+$input-btn-padding-y: 0.4rem;
 $input-btn-padding-x: 1rem;
 
-$border-radius: .313rem;
+$border-radius: 0.313rem;
 
 $component-active-bg: $primary;
 
