--- a/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/components/navigation/_site_navigation.scss
+++ b/modules/dxp/apps/osb/osb-commerce/osb-commerce-provisioning/osb-commerce-provisioning-theme/src/css/components/navigation/_site_navigation.scss
@@ -17,16 +17,16 @@
 			position: absolute;
 			transform: scale3d(0, 1, 1);
 			transform-origin: 0 50%;
-			transition: transform .2s ease-out;
+			transition: transform 0.2s ease-out;
 			width: 100%;
 		}
 
 		&:hover::before {
-			transform: scale3d(1,1,1);
+			transform: scale3d(1, 1, 1);
 		}
 
 		@include media-breakpoint-down(xs) {
-			margin: .5em auto;
+			margin: 0.5em auto;
 		}
 	}
 
