ISSUP-2740 reuse button-holder class and add variation

--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/_custom.scss
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/_custom.scss
@@ -49,11 +49,13 @@ table {
 	}
 }
 
-.button-row {
-	margin-top: $spacing-sm;
+.button-holder {
+	&.button-holder-lg {
+		margin: $spacing-default 0;
+	}
 
-	.btn {
-		margin-right: $spacing-sm;
+	&.button-holder-sm {
+		margin: $spacing-sm 0;
 	}
 }
 
