ISSUP-2740 heading should not take on the markup of table

--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/views/shared.scss
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/views/shared.scss
@@ -226,4 +226,16 @@
 
 .page-content {
 	margin: $spacing-default;
+
+	.sheet-header {
+		align-items: center;
+		border-bottom: 1px solid $divider;
+		display: flex;
+		justify-content: space-between;
+		padding-bottom: $spacing-md;
+
+		&:after {
+			content: unset;
+		}
+	}
 }
