--- a/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/views/account_add_items.scss
+++ b/modules/dxp/apps/osb/osb-provisioning/osb-provisioning-theme/src/css/views/account_add_items.scss
@@ -7,9 +7,9 @@
 	.add-items-header {
 		background-color: $body-bg;
 		border-bottom-color: $light-d1;
-		height: $header-height;
 		margin-bottom: 0;
 		padding-bottom: $spacing-md;
+		padding-top: $spacing-default;
 		text-align: center;
 
 		.header-back-to {
